# faster-rnnlm

./: README.md
faster-rnnlm/: CMakeLists.txt  rnnlm.cc
